# kg-extract

./: .env.example  .gitignore  README.md  RESULTS.md  SCHEMA.md  TESTING-AND-PUBLISHING.md  compare.py  comparison.json  comparison.md  eval_set.json  eval_set.json.bak  extract.py  graph_build.py  graph_rag.py  ingest.py  interaction_diagram_v2.txt  pyproject.toml  schemas.py  vanilla_rag.py
docs/: README.md
examples/: ha_component_diagram.mmd  path_drs_to_admission.json  query_fdm.json
experiments/01_vanilla_rag/: README.md  chat.py  ingest.py  requirements.txt  visualize_embeddings.py
experiments/02_page_index/: README.md  page_index_query.py  requirements.txt
